Openshift/hni-deploy.yml
apiVersion: v1
kind: Pod
metadata:
  name: hni
  namespace: c5839f-test
  labels:
    app: hni-01
    deployment: hni-01
    deploymentconfig: hni-01
spec:
  containers:
      - name: hni
        image: image-registry.apps.silver.devops.gov.bc.ca/c5839f-test/hni:0.1
        ports:
        - containerPort: 14885
          protocol: TCP
