Openshift/hni-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hni-allow-all
spec:
  podSelector: 
    matchLabels:
      app: hni-01
#{} in ingress means allow-all
  ingress:
  - {}
